profile.martinlutheryung.com/cloudflared.yaml
# There are prior steps needed to make this work stated here: https://developers.cloudflare.com/cloudflare-one/tutorials/many-cfd-one-tunnel/:
# 1. Creating the tunnel
#     - ./cloudflared-linux-amd64 tunnel create profile-martinlutheryung
#     - This prints the tunnel ID
# 2. Uploading tunnel credentials to kubernetes
#     - kubectl create secret generic tunnel-credentials-profile-martinlutheryung --from-file=credentials.json=${HOME}/.cloudflared/credentials_filename.json
# 3. Associating tunnel with DNS records (GUI)
#     - from dashboard, then DNS. Select your domain. Then click the "Add Record" button
#     - CName - name - ${TUNNEL_ID}.cfargotunnel.com 
# 4. Then deploying this manifest:
#     - In ConfigMap, change the tunnel-name use.
#     - In container spec, change which credential to use.
#     - Check also the IP to use as this is based on ip-pool.yaml
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 2 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:2024.6.1
        args:
        - tunnel
        # Points cloudflared to the config file, which configures what
        # cloudflared will actually do. This file is created by a ConfigMap
        # below.
        - --config
        - /etc/cloudflared/config/config.yaml
        - run
        livenessProbe:
          httpGet:
            # Cloudflared has a /ready endpoint which returns 200 if and only if
            # it has an active connection to the edge.
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared/config
          readOnly: true
        # Each tunnel has an associated "credentials file" which authorizes machines
        # to run the tunnel. cloudflared will read this file from its local filesystem,
        # and it'll be stored in a k8s secret.
        - name: creds
          mountPath: /etc/cloudflared/creds
          readOnly: true
      volumes:
      - name: creds
        secret:
          # By default, the credentials file will be created under ~/.cloudflared/<tunnel ID>.json
          # when you run `cloudflared tunnel create`. You can move it into a secret by using:
          # ```sh
          # kubectl create secret generic tunnel-credentials \
          # --from-file=credentials.json=/Users/yourusername/.cloudflared/<tunnel ID>.json
          # ```
          secretName: tunnel-credentials-profile-martinlutheryung
      # Create a config.yaml file from the ConfigMap below.
      - name: config
        configMap:
          name: cloudflared
          items:
          - key: config.yaml
            path: config.yaml
